# doibot

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/doibot/: __init__.py  bot.py
src/doibot/commands/: doi.py  greet.py
